--- a/portfolio.html
+++ b/portfolio.html
@@ -142,13 +142,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-2.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-2.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">
                     Постер New Orlean vs Golden Star
@@ -159,13 +169,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-3.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-3.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">Ресторан Seafood</h2>
                   <p class="porfolio-link-text">Додаток</p>
@@ -174,13 +194,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-4.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-4.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">Проєкт Prime</h2>
                   <p class="porfolio-link-text">Маркетинг</p>
@@ -189,13 +219,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-5.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-5.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">Проєкт Boxes</h2>
                   <p class="porfolio-link-text">Додаток</p>
@@ -204,13 +244,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-6.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-6.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">
                     Inspiration has no Borders
@@ -221,13 +271,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-7.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-7.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">Видання Limited Edition</h2>
                   <p class="porfolio-link-text">Дизайн</p>
@@ -236,13 +296,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-8.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-8.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">Проєкт LAB</h2>
                   <p class="porfolio-link-text">Маркетинг</p>
@@ -251,13 +321,23 @@
             </li>
             <li class="porfolio-link-group">
               <a href="#" class="link-options portfolio-links hover-transition">
-                <img
-                  src="./image-porfolio/img-9.jpeg"
-                  alt="image-porfolio"
-                  width="370"
-                  height="295"
-                  class="porfolio-link-img"
-                />
+                <div class="image-portfolio hover-transition">
+                  <img
+                    src="./image-porfolio/img-9.jpeg"
+                    alt="image-porfolio"
+                    width="370"
+                    height="295"
+                    class="porfolio-link-img"
+                  />
+                  <div class="image-overlay hover-transition">
+                    <p>
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-tex-under-img">
                   <h2 class="porfolio-link-title">Growing Business</h2>
                   <p class="porfolio-link-text">Додаток</p>
